import org.jetbrains.kotlin.com.intellij.util.SystemProperties
import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.9.0'
    id 'application'
    id "org.jetbrains.kotlin.plugin.serialization" version "1.9.0"
}

group 'org.example'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile) {
    options.release.set(17)
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
    kotlinOptions {
        jvmTarget = "17"
    }
}

repositories {
    mavenCentral()
    maven() {
        url "https://maven.pkg.jetbrains.space/kotlin/p/kotlin/bootstrap/"
    }
    maven() {
        url "https://dl.google.com/dl/android/maven2"
    }
    maven() {
        url 'https://jitpack.io'
    }
    maven() {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    maven() {
        url 'https://www.jetbrains.com/intellij-repository/releases/'
    }
    maven() {
        url 'https://dl.bintray.com/jetbrains/intellij-third-party-dependencies/'
    }
}

ext {
    kotlin_version = '1.9.0'
    aetherVersion = '1.1.0'
}


dependencies {
    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.6.3'

    //Intellij core
    implementation 'com.android.tools.external.com-intellij:intellij-core:31.8.0-alpha01'

    //Python
    implementation('com.jetbrains.intellij.python:python-community-impl:241.17011.127') {
        transitive = false
    }
    implementation('com.jetbrains.intellij.python:python-community:241.17011.127') {
        transitive = false
    }
    implementation('com.jetbrains.intellij.python:python-psi:241.17011.127') {
        transitive = false
    }
    implementation('com.jetbrains.intellij.python:python-psi-impl:241.17011.127') {
        transitive = false
    }
    implementation('com.jetbrains.intellij.python:python-parser:241.17011.127') {
        transitive = false
    }
    implementation('com.jetbrains.intellij.python:python-ast:241.17011.127') {
        transitive = false
    }
    implementation('com.jetbrains.intellij.python:python-syntax-core:241.17011.127') {
        transitive = false
    }

    implementation('com.jetbrains.intellij.platform:analysis-impl:241.17011.127') {
        transitive = false
    }

    implementation('com.jetbrains.intellij.platform:analysis:241.17011.127') {
        transitive = false
    }

    implementation(files('lib/go-plugin.jar'))
    implementation(files('lib/go-frontback.jar'))

//    implementation 'com.jetbrains.intellij.python:python-psi:241.17011.127'
//    implementation 'com.jetbrains.intellij.python:python-ast:241.17011.127'


    implementation "org.jetbrains.kotlin:kotlin-stdlib"

    //Kootstrap
    implementation group: 'org.apache.maven', name: 'maven-model-builder', version: '3.3.9'
    implementation "org.apache.maven:maven-aether-provider:3.3.3"
    implementation "org.eclipse.aether:aether-api:1.1.0"
    implementation "org.eclipse.aether:aether-util:1.1.0"
    implementation "org.eclipse.aether:aether-impl:${aetherVersion}"
    implementation group: 'org.eclipse.aether', name: 'aether-connector-basic', version: "${aetherVersion}"
    implementation "org.eclipse.aether:aether-transport-file:${aetherVersion}"
    implementation "org.eclipse.aether:aether-transport-http:${aetherVersion}"
    implementation "org.eclipse.aether:aether-transport-wagon:${aetherVersion}"
    implementation "org.apache.maven:maven-aether-provider:3.3.3"
    implementation "org.apache.commons:commons-exec:1.3"

    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
    implementation "commons-io:commons-io:2.6"
    implementation 'com.jcraft:jsch:0.1.55'
    implementation 'org.jetbrains.kotlinx:kotlinx-cli-jvm:0.3'
//    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'

    //Kotlin-libs
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-compiler', version: "${kotlin_version}"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlin_version}"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-compiler', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-compiler-embeddable', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-daemon-embeddable', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-common', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-script-runtime', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-annotations-common', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: "${kotlin_version}"
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "${kotlin_version}"

    //Antlr
    implementation("org.antlr:antlr4-runtime:4.13.1")

    implementation(files('lib/app-client.jar'))
}

sourceSets {
    main {
        java {
            srcDirs("src/main/java", "templates-db/src/generated")
        }
        kotlin {
            srcDirs("src/main/kotlin")
        }
    }
}


test {
    useJUnitPlatform()
}

task(runFuzzer, dependsOn: 'classes', type: JavaExec) {
    main = 'com.spbpu.bbfinfrastructure.MainKt'
    classpath = sourceSets.main.runtimeClasspath
    def programArgs = project.hasProperty('programArgs') ? project.programArgs : ""
    def vulnomiconJavaHome = project.hasProperty("vulnomiconJavaHome") ? vulnomiconJavaHome : ""
    environment('VULNOMICON_JAVA_HOME_17', vulnomiconJavaHome)
    argsString programArgs
    jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED"
}

task(runInfFuzzer, dependsOn: 'classes', type: JavaExec) {
    main = 'com.spbpu.bbfinfrastructure.runner.MainKt'
    classpath = sourceSets.main.runtimeClasspath
    def programArgs = project.hasProperty('programArgs') ? project.programArgs : ""
    def vulnomiconJavaHome = project.hasProperty("vulnomiconJavaHome") ? vulnomiconJavaHome : ""
    environment('VULNOMICON_JAVA_HOME_17', vulnomiconJavaHome)
    argsString programArgs
    jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED"
    try {
        environment("GRADLE_JAVA_HOME", SystemProperties.getJavaHome())
    } catch (Throwable e) {}
}


task(checkTemplates, dependsOn: 'classes', type: JavaExec) {
    main = 'com.spbpu.bbfinfrastructure.test.JavaTemplatesCheckerKt'
    classpath = sourceSets.main.runtimeClasspath
    def programArgs = project.hasProperty('programArgs') ? project.programArgs : ""
    argsString programArgs
    jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED"
}

task(markupBenchmark, dependsOn: 'classes', type: JavaExec) {
    main = 'com.spbpu.bbfinfrastructure.markup.MarkupKt'
    classpath = sourceSets.main.runtimeClasspath
    def programArgs = project.hasProperty('programArgs') ? project.programArgs : ""
    argsString programArgs
    jvmArgs "--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED"
}
